--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "gulp-util": "^3.0.2",
+    "mysql": "^2.5.4",
     "mysql-utilities": "^1.0.6",
-    "q": "^1.1.2"
+    "q": "^1.1.2",
+    "utilities": "^1.0.4"
   }
 }
