--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.8.10"
   },
   "dependencies": {
+    "express": "^4.10.7",
     "gulp-util": "^3.0.2",
     "mysql": "^2.5.4",
     "mysql-utilities": "^1.0.6",
