--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "body-parser": "^1.10.1",
     "express": "^4.10.7",
     "gulp-util": "^3.0.2",
+    "mekanika-utils-each": "^1.0.0",
     "mysql": "^2.5.4",
     "mysql-utilities": "^1.0.6",
     "q": "^1.1.2",
+    "serialport": "^1.4.10",
     "underscore": "^1.7.0",
     "utilities": "^1.0.4"
   }
