--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.5.4",
     "mysql-utilities": "^1.0.6",
     "q": "^1.1.2",
+    "requestify": "^0.1.16",
     "serialport": "^1.4.10",
     "underscore": "^1.7.0",
     "utilities": "^1.0.4"
